fix: made event type select fit its content to avoid mobile overflow

--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@
   select {
     color: #ffffff !important;
     background-color: rgba(0, 0, 0, 0.75) !important;
-    padding: 10px 14px !important;
+    padding: 10px 14px;
     border-radius: 16px !important;
     border: 2px solid white !important;
     box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fb8500, 0 0 40px #fb8500 !important;
